src/snapshots/rv__resolver__tests__dep_force_source_no_lockfile.txt.snap
---
source: src/resolver.rs
expression: out
---
R6=2.5.1 (from http://cran, type=source, from_lockfile=false, path='')
