src/snapshots/rv__resolver__tests__dplyr.toml.snap
---
source: src/resolver.rs
expression: out
---
dplyr=1.1.4 (from test, type=binary, status=absent)
cli=3.6.3 (from test, type=binary, status=absent)
generics=0.1.3 (from test, type=binary, status=absent)
glue=1.8.0 (from test, type=binary, status=absent)
lifecycle=1.0.4 (from test, type=binary, status=absent)
magrittr=2.0.3 (from test, type=binary, status=absent)
pillar=1.10.0 (from test, type=binary, status=absent)
R6=2.5.1 (from test, type=binary, status=absent)
rlang=1.1.4 (from test, type=binary, status=absent)
tibble=3.2.1 (from test, type=binary, status=absent)
tidyselect=1.2.1 (from test, type=binary, status=absent)
vctrs=0.6.5 (from test, type=binary, status=absent)
utf8=1.2.4 (from test, type=binary, status=absent)
fansi=1.0.6 (from test, type=binary, status=absent)
pkgconfig=2.0.3 (from test, type=binary, status=absent)
withr=3.0.2 (from test, type=binary, status=absent)
