src/snapshots/rv__resolver__tests__higher_r_version.toml.snap
---
source: src/resolver.rs
expression: out
---
cluster=2.1.7 (from test, type=source, status=absent)
