src/snapshots/rv__resolver__tests__higher_r_version.txt.snap
---
source: src/resolver.rs
expression: out
---
cluster=2.1.7 (from http://posit, type=binary, from_lockfile=false, path='4.5.0/Recommended')
