src/snapshots/rv__resolver__tests__missing_req.toml.snap
---
source: src/resolver.rs
expression: out
---
testing-only=0.0.1 (from test, type=source)
--- unresolved --- 
zzlite (>= 1.0)
