src/snapshots/rv__resolver__tests__multi-repo-combination-suggests-failure.txt.snap
---
source: src/resolver.rs
expression: out
---
slurmtools=0.1.2 (from http://a2-ai-universe, type=source, from_lockfile=false, path='')
brio=1.1.5 (from http://P3M, type=binary, from_lockfile=false, path='')
dplyr=1.1.4 (from http://P3M, type=binary, from_lockfile=false, path='')
fs=1.6.5 (from http://P3M, type=binary, from_lockfile=false, path='')
glue=1.8.0 (from http://P3M, type=binary, from_lockfile=false, path='')
jsonlite=1.8.9 (from http://P3M, type=binary, from_lockfile=false, path='')
processx=3.8.4 (from http://P3M, type=binary, from_lockfile=false, path='')
purrr=1.0.2 (from http://P3M, type=binary, from_lockfile=false, path='')
rlang=1.1.4 (from http://P3M, type=binary, from_lockfile=false, path='')
tibble=3.2.1 (from http://P3M, type=binary, from_lockfile=false, path='')
whisker=0.4.1 (from http://P3M, type=binary, from_lockfile=false, path='')
withr=3.0.2 (from http://P3M, type=binary, from_lockfile=false, path='')
here=1.0.1 (from http://P3M, type=binary, from_lockfile=false, path='')
cli=3.6.3 (from http://P3M, type=binary, from_lockfile=false, path='')
stringi=1.8.4 (from http://P3M, type=binary, from_lockfile=false, path='')
hms=1.1.3 (from http://P3M, type=binary, from_lockfile=false, path='')
lifecycle=1.0.4 (from http://P3M, type=binary, from_lockfile=false, path='')
knitr=1.49 (from http://P3M, type=binary, from_lockfile=false, path='')
rmarkdown=2.29 (from http://P3M, type=binary, from_lockfile=false, path='')
testthat=3.2.2 (from http://P3M, type=binary, from_lockfile=false, path='')
generics=0.1.3 (from http://P3M, type=binary, from_lockfile=false, path='')
magrittr=2.0.3 (from http://P3M, type=binary, from_lockfile=false, path='')
pillar=1.9.0 (from http://P3M, type=binary, from_lockfile=false, path='')
R6=2.5.1 (from http://P3M, type=binary, from_lockfile=false, path='')
tidyselect=1.2.1 (from http://P3M, type=binary, from_lockfile=false, path='')
vctrs=0.6.5 (from http://P3M, type=binary, from_lockfile=false, path='')
ps=1.8.1 (from http://P3M, type=binary, from_lockfile=false, path='')
fansi=1.0.6 (from http://P3M, type=binary, from_lockfile=false, path='')
pkgconfig=2.0.3 (from http://P3M, type=binary, from_lockfile=false, path='')
rprojroot=2.0.4 (from http://P3M, type=binary, from_lockfile=false, path='')
evaluate=1.0.1 (from http://P3M, type=binary, from_lockfile=false, path='')
highr=0.11 (from http://P3M, type=binary, from_lockfile=false, path='')
xfun=0.49 (from http://P3M, type=binary, from_lockfile=false, path='')
yaml=2.3.10 (from http://P3M, type=binary, from_lockfile=false, path='')
bslib=0.8.0 (from http://P3M, type=binary, from_lockfile=false, path='')
fontawesome=0.5.3 (from http://P3M, type=binary, from_lockfile=false, path='')
htmltools=0.5.8.1 (from http://P3M, type=binary, from_lockfile=false, path='')
jquerylib=0.1.4 (from http://P3M, type=binary, from_lockfile=false, path='')
tinytex=0.54 (from http://P3M, type=binary, from_lockfile=false, path='')
callr=3.7.6 (from http://P3M, type=binary, from_lockfile=false, path='')
desc=1.4.3 (from http://P3M, type=binary, from_lockfile=false, path='')
digest=0.6.37 (from http://P3M, type=binary, from_lockfile=false, path='')
pkgload=1.4.0 (from http://P3M, type=binary, from_lockfile=false, path='')
praise=1.0.0 (from http://P3M, type=binary, from_lockfile=false, path='')
waldo=0.6.1 (from http://P3M, type=binary, from_lockfile=false, path='')
utf8=1.2.4 (from http://P3M, type=binary, from_lockfile=false, path='')
base64enc=0.1-3 (from http://P3M, type=binary, from_lockfile=false, path='')
cachem=1.1.0 (from http://P3M, type=binary, from_lockfile=false, path='')
fastmap=1.2.0 (from http://P3M, type=binary, from_lockfile=false, path='')
memoise=2.0.1 (from http://P3M, type=binary, from_lockfile=false, path='')
mime=0.12 (from http://P3M, type=binary, from_lockfile=false, path='')
sass=0.4.9 (from http://P3M, type=binary, from_lockfile=false, path='')
pkgbuild=1.4.5 (from http://P3M, type=binary, from_lockfile=false, path='')
diffobj=0.3.5 (from http://P3M, type=binary, from_lockfile=false, path='')
rappdirs=0.3.3 (from http://P3M, type=binary, from_lockfile=false, path='')
crayon=1.5.3 (from http://P3M, type=binary, from_lockfile=false, path='')
--- unresolved --- 
bbr from: dependency of `slurmtools`
