src/snapshots/rv__resolver__tests__path.txt.snap
---
source: src/resolver.rs
expression: out
---
MASS=7.3-61 (repository(url: http://posit), type=source, from_lockfile=false, path='4.5.0/Recommended')
