src/snapshots/rv__resolver__tests__priority-order.toml.snap
---
source: src/resolver.rs
expression: out
---
texPreview=2.1.0 (from gh-mirror)
base64enc=0.1-3 (from test)
details=0.3.0 (from test)
fs=1.6.5 (from test)
htmltools=0.5.8.1 (from test)
knitr=1.49 (from test)
magick=2.8.5 (from test)
rematch2=2.1.2 (from test)
rstudioapi=0.17.1 (from test)
svgPanZoom=0.3.4 (from test)
whisker=0.4.1 (from test)
xml2=1.3.6 (from test)
tinytex=0.54 (from test)
clipr=0.8.0 (from test)
desc=1.4.3 (from test)
httr=1.4.7 (from test)
magrittr=2.0.3 (from test)
png=0.1-8 (from test)
withr=3.0.2 (from test)
digest=0.6.37 (from test)
fastmap=1.2.0 (from test)
rlang=1.1.4 (from test)
evaluate=1.0.1 (from test)
highr=0.11 (from test)
xfun=0.49 (from test)
yaml=2.3.10 (from test)
Rcpp=1.0.13-1 (from test)
curl=6.0.1 (from test)
tibble=3.2.1 (from test)
htmlwidgets=1.6.4 (from test)
cli=3.6.3 (from test)
R6=2.5.1 (from test)
jsonlite=1.8.9 (from test)
mime=0.12 (from test)
openssl=2.2.2 (from test)
fansi=1.0.6 (from test)
lifecycle=1.0.4 (from test)
pillar=1.9.0 (from test)
pkgconfig=2.0.3 (from test)
vctrs=0.6.5 (from test)
rmarkdown=2.29 (from test)
askpass=1.2.1 (from test)
glue=1.8.0 (from test)
utf8=1.2.4 (from test)
bslib=0.8.0 (from test)
fontawesome=0.5.3 (from test)
jquerylib=0.1.4 (from test)
sys=3.4.3 (from test)
cachem=1.1.0 (from test)
memoise=2.0.1 (from test)
sass=0.4.9 (from test)
rappdirs=0.3.3 (from test)
