src/snapshots/rv__resolver__tests__priority_in_file_order.toml.snap
---
source: src/resolver.rs
expression: out
---
zyp=0.12-3 (from test, type=source, status=absent)
Kendall=2.2.1 (from test, type=binary, status=absent)
boot=1.3-31 (from test, type=binary, status=absent)
