src/snapshots/rv__resolver__tests__repo_priority_order.txt.snap
---
source: src/resolver.rs
expression: out
---
texPreview=2.1.0 (from http://gh-pkg-mirror, type=binary, from_lockfile=false, path='')
base64enc=0.1-3 (from http://cran, type=binary, from_lockfile=false, path='')
details=0.3.0 (from http://cran, type=binary, from_lockfile=false, path='')
fs=1.6.5 (from http://cran, type=binary, from_lockfile=false, path='')
htmltools=0.5.8.1 (from http://cran, type=binary, from_lockfile=false, path='')
knitr=1.49 (from http://cran, type=binary, from_lockfile=false, path='')
magick=2.8.5 (from http://cran, type=binary, from_lockfile=false, path='')
rematch2=2.1.2 (from http://cran, type=binary, from_lockfile=false, path='')
rstudioapi=0.17.1 (from http://cran, type=binary, from_lockfile=false, path='')
svgPanZoom=0.3.4 (from http://cran, type=binary, from_lockfile=false, path='')
whisker=0.4.1 (from http://cran, type=binary, from_lockfile=false, path='')
xml2=1.3.6 (from http://cran, type=binary, from_lockfile=false, path='')
tinytex=0.54 (from http://cran, type=binary, from_lockfile=false, path='')
clipr=0.8.0 (from http://cran, type=binary, from_lockfile=false, path='')
desc=1.4.3 (from http://cran, type=binary, from_lockfile=false, path='')
httr=1.4.7 (from http://cran, type=binary, from_lockfile=false, path='')
magrittr=2.0.3 (from http://cran, type=binary, from_lockfile=false, path='')
png=0.1-8 (from http://cran, type=binary, from_lockfile=false, path='')
withr=3.0.2 (from http://cran, type=binary, from_lockfile=false, path='')
digest=0.6.37 (from http://cran, type=binary, from_lockfile=false, path='')
fastmap=1.2.0 (from http://cran, type=binary, from_lockfile=false, path='')
rlang=1.1.4 (from http://cran, type=binary, from_lockfile=false, path='')
evaluate=1.0.1 (from http://cran, type=binary, from_lockfile=false, path='')
highr=0.11 (from http://cran, type=binary, from_lockfile=false, path='')
xfun=0.49 (from http://cran, type=binary, from_lockfile=false, path='')
yaml=2.3.10 (from http://cran, type=binary, from_lockfile=false, path='')
Rcpp=1.0.13-1 (from http://cran, type=binary, from_lockfile=false, path='')
curl=6.0.1 (from http://cran, type=binary, from_lockfile=false, path='')
tibble=3.2.1 (from http://cran, type=binary, from_lockfile=false, path='')
htmlwidgets=1.6.4 (from http://cran, type=binary, from_lockfile=false, path='')
cli=3.6.3 (from http://cran, type=binary, from_lockfile=false, path='')
R6=2.5.1 (from http://cran, type=binary, from_lockfile=false, path='')
jsonlite=1.8.9 (from http://cran, type=binary, from_lockfile=false, path='')
mime=0.12 (from http://cran, type=binary, from_lockfile=false, path='')
openssl=2.3.0 (from http://cran, type=binary, from_lockfile=false, path='')
fansi=1.0.6 (from http://cran, type=binary, from_lockfile=false, path='')
lifecycle=1.0.4 (from http://cran, type=binary, from_lockfile=false, path='')
pillar=1.10.0 (from http://cran, type=binary, from_lockfile=false, path='')
pkgconfig=2.0.3 (from http://cran, type=binary, from_lockfile=false, path='')
vctrs=0.6.5 (from http://cran, type=binary, from_lockfile=false, path='')
rmarkdown=2.29 (from http://cran, type=binary, from_lockfile=false, path='')
askpass=1.2.1 (from http://cran, type=binary, from_lockfile=false, path='')
glue=1.8.0 (from http://cran, type=binary, from_lockfile=false, path='')
utf8=1.2.4 (from http://cran, type=binary, from_lockfile=false, path='')
bslib=0.8.0 (from http://cran, type=binary, from_lockfile=false, path='')
fontawesome=0.5.3 (from http://cran, type=binary, from_lockfile=false, path='')
jquerylib=0.1.4 (from http://cran, type=binary, from_lockfile=false, path='')
sys=3.4.3 (from http://cran, type=binary, from_lockfile=false, path='')
cachem=1.1.0 (from http://cran, type=binary, from_lockfile=false, path='')
memoise=2.0.1 (from http://cran, type=binary, from_lockfile=false, path='')
sass=0.4.9 (from http://cran, type=binary, from_lockfile=false, path='')
rappdirs=0.3.3 (from http://cran, type=binary, from_lockfile=false, path='')
